--- a/theme/mebis/scss/moodle/_coursebox.scss
+++ b/theme/mebis/scss/moodle/_coursebox.scss
@@ -8,6 +8,7 @@
 
 .coursenumber-label {
     margin-right: 8px;
+    margin-left: 20px;
     display: inline-block;
 }
 
