--- a/theme/mebis/scss/moodle/_general.scss
+++ b/theme/mebis/scss/moodle/_general.scss
@@ -79,6 +79,7 @@ div.block,
         position: absolute;
         left: auto!important;
         display: none;
+        min-width: 260px;
 
         .iconsmall {
             margin: 0;
